Update for Zirui website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Zineng Tang</title>
+  <title>Zirui Song</title>
   
-  <meta name="author" content="Zineng Tang">
+  <meta name="author" content="Zirui Song">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -18,23 +18,22 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Zineng Tang</name>
+                <name>Zirui Song</name>
               </p>
-              <p>  I am a first year Ph.D student at BAIR (Berkeley Artificial Intelligence) working with <a href="https://www.alanesuhr.com/">Alane Suhr</a>.
-		   Previously, I had wonderful experience working with <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal</a> at <a href="https://nlp.cs.unc.edu/">UNC-NLP</a>, <a href="https://murgelab.cs.unc.edu/">MURGe-Lab</a> 
-	           and <a href="https://ziyi-yang.github.io/">Ziyi Yang</a> at Microsoft. I did my undergrad at UNC Chapel Hill!
+              <p>  I am a third year Undergraduate at University of Technology Sydeny(UTS). I am working with NTU <a href="https://www.ntu.edu.sg/rose">ROSE</a> <a href="https://dayan-guan.github.io/">Dayan Guan</a>, University of Sydeny <a href="https://a5507203.github.io/">Yu Yao</a> and Mohamed bin Zayed University of Artificial Intelligence (MBZUAI) <a href="https://zhenhaochenofficial.github.io/" >Zhenhao Chen</a>
+		   . Previously, I had wonderful experience working with <a href="https://jsjytx.neuq.edu.cn/info/1041/1634.htm">Miao Fang</a> at <a href="https://www.NEU.edu.cn">NEU</a>. I am seeking for the 2025 fall Ph.D position.
 <!-- 		   I am the <strong>awardee</strong> of the <a href="https://cra.org/2023-outstanding-undergraduate-researcher-award-recipients/">2023 CRA Outstanding Undergraduate Researcher Award</a>. -->
               </p>
               <p style="text-align:center">
-                <a href="mailto:zn.tang.terran@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="images/CV.pdf">CV</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=bZy4vtwAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://twitter.com/ZinengTang">Twitter</a> &nbsp/&nbsp
-                <a href="https://github.com/zinengtang">Github</a>
+                <a href="zirui.song@student.uts.edu.au">Email</a> &nbsp/&nbsp
+                <!-- <a href="images/CV.pdf">CV</a> &nbsp/&nbsp -->
+                <a href="https://scholar.google.com/citations?user=fmKRIPUAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://twitter.com/stevenS28456474">Twitter</a> &nbsp/&nbsp
+                <a href="https://github.com/ziruisongbest">Github</a>
               </p>
             </td>
             <td style="padding:2.5%;width:25%;max-width:25%">
-              <a href="images/zineng.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/zineng.jpg" class="hoverZoomLink"></a>
+              <a href="images/zirui.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/zirui.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -43,7 +42,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                My primary research interests lie in the area of multi-modal learning, natural language processing, and machine learning.
+                My primary research interests lie in the area of Large Multimodal Models , Vision COT and Prompt Engineering.
               </p>
             </td>
           </tr>
@@ -52,35 +51,43 @@
         <table style="width:100%;border:0;border-collapse:collapse;border-spacing:0;margin-right:auto;margin-left:auto;"><tbody>
 		<tr style="vertical-align:left;">
 			    <td style="padding:30px;width:35%;vertical-align:center">
-				  <img src='images/codi.jpg' width="250">
+				  <img src='images/BenchLMM.png' width="250">
 			    </td>
 			  <td style="padding:30px;width:75%;vertical-align:center">
-				<a href="https://arxiv.org/abs/2305.11846">
-				  <papertitle>CoDi: Any-to-Any Generation via Composable Diffusion</papertitle>
+				<a href="https://arxiv.org/abs/2312.02896">
+				<papertitle>BenchLMM: Benchmarking Cross-style Visual Capability of Large Multimodal Models</papertitle>
 				</a>
 				<br>
-				<strong>Zineng Tang</strong>,
+				<a href="https://github.com/RizhaoCai">Rizhao Cai*</a>, 
+				<strong >Zirui Song*</strong>
+				<a href="https://dayan-guan.github.io/">Dayan Guan†</a>, 
+				<a href="https://zhenhaochenofficial.github.io/">Zhenhao Chen</a>, 
+				<a>Xing Luo</a>, 
+				<a href="https://github.com/Newbeeyoung">Chenyu Yi</a>, 
+				<a href="https://personal.ntu.edu.sg/eackot/">Alex Kot</a>
+				<h5 > *Equal contribution, †Corresponding Author </h5>
+				<!-- <strong>Zineng Tang</strong>,
 				<a href="https://www.microsoft.com/en-us/research/people/ziyiyang/">Ziyi Yang</a>,
 				<a href="https://nlp-yang.github.io/">Yang Liu</a>,
 				<a href="https://cs.stanford.edu/people/cgzhu/">Chenguang Zhu</a>,
 				<a href="https://www.microsoft.com/en-us/research/people/nzeng/">Michael Zeng</a>,
-					<a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal</a>
+					<a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal</a> -->
 				<br>
 				<em>Arxiv</em>, 2023
 				<br>
-				<a href="https://codi-gen.github.io/">Project Page</a>
+				<a href="https://aifeg.github.io/BenchLMM/">Project Page</a>
 				  /
-				<a href="https://github.com/microsoft/i-Code/tree/main/i-Code-V3">github</a>
+				<a href="https://github.com/AIFEG/BenchLMM">github</a>
 				/
-				<a href="https://arxiv.org/abs/2305.11846">arXiv</a>
+				<a href="https://arxiv.org/abs/2312.02896">arXiv</a>
 				<p></p>
 				<p>
-				We built a framework for any to any modality mapping.
+					We propose BenchLMM to investigate the cross-style capability of Large Multimodal Models (LMMs). 
 				</p>
 			  </td>
 			</tr>
 					
-          	<tr>
+          	<!-- <tr>
 				
 			  <tr style="vertical-align:left;">
 			    <td style="padding:30px;width:35%;vertical-align:center">
@@ -237,7 +244,7 @@
 				We built a video QA framework basde on various techniques like dense captions.
 				</p>
 			  </td>
-			</tr>
+			</tr> -->
         </tbody></table>
 		
 		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
@@ -249,9 +256,22 @@
 		</tbody></table>
 		<table width="100%" align="center" border="0" cellpadding="20"><tbody>  
 			<tr>
-				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/unc.png"></td>
+				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/Hengshui_High_School.jpg"></td>
 				<td width="75%" valign="center">
-				  <p>UNC Chapel Hill, B.S. in Mathematics, 2019 - present </p>
+				  <p><b>Top 2</b> Senior high school in China, 2018 - 2021 </p>
+				</td>
+			</tr>	
+			<tr>
+				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/NEU.png"></td>
+				<td width="75%" valign="center">
+				  <p>Northeastern University, B.S. in Computer Science and Technology, 2021 - 2022 </p>
+				  <p>After two years of academic pursuits, I was honored to be selected as an exchange student for the University of Technology Sydney, where I will complete the final two years of my undergraduate studies.</p>
+				</td>
+			</tr>	
+			<tr>
+				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/University_of_Technology_Sydney_emblem.svg.png"></td>
+				<td width="75%" valign="center">
+				  <p>University of Technology Sydeny, B.S. in Software Engineering, 2023 - Present  </p>
 				</td>
 			</tr>	
 		</tbody></table>
@@ -265,20 +285,21 @@
 		</tbody></table>
 		<table width="100%" align="center" border="0" cellpadding="20"><tbody>  
 			<tr>
-				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/murgelab-logo.png"></td>
+				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/NJUsvg.png"></td>
 				<td width="75%" valign="center">
-				  <p><a href="https://murgelab.cs.unc.edu/">MURGe-Lab</a>, Undergraduate Research Assistant </p>
+				  <p><a href="http://nlp.nju.edu.cn/homepage/">NJU-NLP Lab</a>, Summer Camper </p>
 				</td>
 			</tr>	
+
 			<tr>
-				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/microsoft.png"></td>
+				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/ROSE.png"></td>
 				<td width="75%" valign="center">
-				  <p><a href="https://www.microsoft.com/en-us/research/group/cognitive-services-research/">Microsoft Azure Cognitive Services Research</a>, Research Intern </p>
+				  <p><a href="https://www.ntu.edu.sg/rose/">Rapid-Rich Object Search Lab (ROSE)</a>, Undergraduate research assistant </p>
 				</td>
 			</tr>
 		</tbody></table>
 		
-		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+		<!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
 		  <tr>
 			<td>
 			  <heading>Awards</heading>
@@ -293,7 +314,7 @@
 				  <p>Awardee, Outstanding Undergraduate Researcher Award 2023. Computing Research Association (CRA)</p>
 				</td>
 			</tr>
-		</tbody></table>	  
+		</tbody></table>	   -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
