Update high school

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 			<tr>
 				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/Hengshui_High_School.jpg"></td>
 				<td width="75%" valign="center">
-				  <p><b>Top 2</b> Senior high school in China, 2018 - 2021 </p>
+				  <p>Hengshui High School of Hebei,<b>Top 2</b> Senior high school in China, 2018 - 2021 </p>
 				</td>
 			</tr>	
 			<tr>
