--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
                 <name>Zirui Song</name>
               </p>
               <p>  I am a third year Undergraduate at University of Technology Sydeny(UTS). I am working with NTU <a href="https://www.ntu.edu.sg/rose">ROSE</a> <a href="https://dayan-guan.github.io/">Dayan Guan</a>, University of Sydeny <a href="https://a5507203.github.io/">Yu Yao</a> and Mohamed bin Zayed University of Artificial Intelligence (MBZUAI) <a href="https://zhenhaochenofficial.github.io/" >Zhenhao Chen</a>
-		   . Previously, I had wonderful experience working with <a href="https://jsjytx.neuq.edu.cn/info/1041/1634.htm">Miao Fang</a> at <a href="https://www.NEU.edu.cn">NEU</a>. I am seeking for the 2025 fall Ph.D position.
+		   . Previously, I had wonderful experience working with <a href="https://jsjytx.neuq.edu.cn/info/1041/1634.htm">Miao Fang</a> at <a href="https://www.NEU.edu.cn">NEU</a>.
 <!-- 		   I am the <strong>awardee</strong> of the <a href="https://cra.org/2023-outstanding-undergraduate-researcher-award-recipients/">2023 CRA Outstanding Undergraduate Researcher Award</a>. -->
               </p>
+			  <p>I am curently seeking for the Mphil/Ph.D position in 2025 fall</p>
               <p style="text-align:center">
                 <a href="zirui.song@student.uts.edu.au">Email</a> &nbsp/&nbsp
                 <!-- <a href="images/CV.pdf">CV</a> &nbsp/&nbsp -->
