--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 			  <p>I am curently seeking for the Mphil/Ph.D position in 2025 fall</p>
               <p style="text-align:center">
                 <a href="zirui.song@student.uts.edu.au">Email</a> &nbsp/&nbsp
-                <!-- <a href="images/CV.pdf">CV</a> &nbsp/&nbsp -->
+                <a href="images/CV_UTS_Zirui_Song_PhD_application_Jan.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=fmKRIPUAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/stevenS28456474">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/ziruisongbest">Github</a>
+
               </p>
             </td>
             <td style="padding:2.5%;width:25%;max-width:25%">
@@ -88,6 +89,43 @@
 			  </td>
 			</tr>
 					
+			<tr style="vertical-align:left;">
+			    <td style="padding:30px;width:35%;vertical-align:center">
+				  <img src='images/OPV.png' width="250">
+			    </td>
+			  <td style="padding:30px;width:75%;vertical-align:center">
+				<a href="https://arxiv.org/abs/2312.15965">
+				<papertitle>Efficient Reinforcemen Learning with Decoupling Exploration and Utilization</papertitle>
+				</a>
+				<br>
+				<a >Jingpu Yang</a>, 
+				<a >Qirui Zhao</a>
+				<a >Helin Wang</a>, 
+				<a >Yuxiao Huang</a>, 
+				<strong>Zirui Song</strong>, 
+				<a href="https://jsjytx.neuq.edu.cn/info/1041/1634.htm">Miao Fang†</a>, 
+				<!-- <a >Alex Kot</a> -->
+				<h5 > †Corresponding Author </h5>
+				<!-- <strong>Zineng Tang</strong>,
+				<a href="https://www.microsoft.com/en-us/research/people/ziyiyang/">Ziyi Yang</a>,
+				<a href="https://nlp-yang.github.io/">Yang Liu</a>,
+				<a href="https://cs.stanford.edu/people/cgzhu/">Chenguang Zhu</a>,
+				<a href="https://www.microsoft.com/en-us/research/people/nzeng/">Michael Zeng</a>,
+					<a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal</a> -->
+				<br>
+				<em>Arxiv</em>, 2023
+				<br>
+				<!-- <a href="https://aifeg.github.io/BenchLMM/">Project Page</a>
+				  / -->
+				<a href="https://github.com/yydsok/OPARL">github</a>
+				/
+				<a href="https://arxiv.org/abs/2312.15965">arXiv</a>
+				<p></p>
+				<p>
+					We propose BenchLMM to investigate the cross-style capability of Large Multimodal Models (LMMs). 
+				</p>
+			  </td>
+			</tr>
           	<!-- <tr>
 				
 			  <tr style="vertical-align:left;">
