--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			  <p>I am curently seeking for the Mphil/Ph.D position in 2025 fall</p>
               <p style="text-align:center">
                 <a href="zirui.song@student.uts.edu.au">Email</a> &nbsp/&nbsp
-                <a href="images/CV_UTS_Zirui_Song_PhD_application_Jan.pdf">CV</a> &nbsp/&nbsp
+				<a href="images/CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=fmKRIPUAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/stevenS28456474">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/ziruisongbest">Github</a>
@@ -122,7 +122,7 @@
 				<a href="https://arxiv.org/abs/2312.15965">arXiv</a>
 				<p></p>
 				<p>
-					We propose BenchLMM to investigate the cross-style capability of Large Multimodal Models (LMMs). 
+					The paper introduces the OPARL (Optimistic and Pessimistic Actor Reinforcement Learning) algorithm, an innovative approach in reinforcement learning that enhances agent performance by efficiently decoupling exploration and exploitation strategies, thereby achieving a balanced and effective learning process across various applications​​.
 				</p>
 			  </td>
 			</tr>
