--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			    </td>
 			  <td style="padding:30px;width:75%;vertical-align:center">
 				<a href="https://arxiv.org/abs/2312.15965">
-				<papertitle>Efficient Reinforcemen Learning with Decoupling Exploration and Utilization</papertitle>
+				<papertitle>Efficient Reinforcemen Learning via Decoupling Exploration and Utilization</papertitle>
 				</a>
 				<br>
 				<a >Jingpu Yang</a>, 
@@ -297,7 +297,8 @@
 			<tr>
 				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/Hengshui_High_School.jpg"></td>
 				<td width="75%" valign="center">
-				  <p>Hengshui High School of Hebei,<b>Top 2</b> Senior high school in China, 2018 - 2021 </p>
+				  <p>Hengshui High School of Hebei, <b>Top 2</b> Senior high school in China, 2018 - 2021 </p>
+				  <p>"I am very grateful to have met my science and innovation mentor here.</p>
 				</td>
 			</tr>	
 			<tr>
