--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
 			<tr>
 				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/Hengshui_High_School.jpg"></td>
 				<td width="75%" valign="center">
-				  <p>Hengshui High School of Hebei, <b>Top 2</b> Senior high school in China, 2018 - 2021 </p>
-				  <p>"I am very grateful to have met my science and innovation mentor here.</p>
+				  <p>Hebei Hengshui High School, <b>Top 1</b> Senior high school in China<a href="https://www.isacteach.com/top-600-high-schools-in-china/"></a>, 2018 - 2021 </p>
+				  <p>I am very grateful to have met my science and innovation mentor here.</p>
 				</td>
 			</tr>	
 			<tr>
@@ -312,6 +312,7 @@
 				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/University_of_Technology_Sydney_emblem.svg.png"></td>
 				<td width="75%" valign="center">
 				  <p>University of Technology Sydeny, B.S. in Software Engineering, 2023 - Present  </p>
+				  I belive that I will get first class honours degree in 2025.
 				</td>
 			</tr>	
 		</tbody></table>
