--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			  <p>I am curently seeking for the Mphil/Ph.D position in 2025 fall</p>
               <p style="text-align:center">
                 <a href="zirui.song@student.uts.edu.au">Email</a> &nbsp/&nbsp
-				<a href="images/CV.pdf">CV</a> &nbsp/&nbsp
+				<a href="images/CV_UTS_Zirui_Song_PhD_application.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=fmKRIPUAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/stevenS28456474">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/ziruisongbest">Github</a>
