--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 				<a href="images/CV_UTS_Zirui_Song_PhD_application.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=fmKRIPUAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/stevenS28456474">Twitter</a> &nbsp/&nbsp
-                <a href="https://github.com/ziruisongbest">Github</a>
+                <a href="https://github.com/ziruisongbest">Github</a> &nbsp/&nbsp
+				<a href="https://www.linkedin.com/in/zirui-song-333863289/">LinkedIn</a> &nbsp/&nbsp
+				<a href="images/Wechat.png">Wechat</a>
+
 
               </p>
             </td>
