--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<!-- NTU <a href="https://www.ntu.edu.sg/rose">ROSE</a> <a href="https://dayan-guan.github.io/">Dayan Guan</a>, University of Sydeny <a href="https://a5507203.github.io/">Yu Yao</a> and Mohamed bin Zayed University of Artificial Intelligence (MBZUAI) <a href="https://zhenhaochenofficial.github.io/" >Zhenhao Chen</a>
 		   --> Previously, I had wonderful experience working with <a href="https://jsjytx.neuq.edu.cn/info/1041/1634.htm">Miao Fang</a> at <a href="https://www.NEU.edu.cn">NEU</a>. 
               </p>
-			  <p>I am curently seeking for the Mphil/Ph.D position in 2025 fall</p>
+			  <p>I am curently seeking for the Mphil/Ph.D position in 2025 fall.</p>
               <p style="text-align:center">
                 <a href="zirui.song@student.uts.edu.au">Email</a> &nbsp/&nbsp
 				<a href="images/CV_UTS_Zirui_Song_PhD_application.pdf">CV</a> &nbsp/&nbsp
@@ -47,7 +47,8 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>What's news</heading>
-              <p>
+              <p style="color: red; font-weight: bold;">
+				2024-07-01: <a href="https://aifeg.github.io/BenchLMM/">One paper</a>  was accept by ECCV 2024. </p> <p>
 				2024-02-29: Prof. Ling Chen had accepted me as an undergraduate research assistant at Australia Artificial Intelligence Institute(AAII). <br>
 				2023-07-01: I am honored to be selected as an international exchange student majoring in Softawre Engineering at UTS. <br>
 				2023-05-18: Prof. Dayan Guan had accepted me as a remote undergraduate research assistant at ROSE Lab. <br>
@@ -91,14 +92,8 @@
 				<a href="https://github.com/Newbeeyoung">Chenyu Yi</a>, 
 				<a href="https://personal.ntu.edu.sg/eackot/">Alex Kot</a>
 				<h5 > *Equal contribution, †Corresponding Author </h5>
-				<!-- <strong>Zineng Tang</strong>,
-				<a href="https://www.microsoft.com/en-us/research/people/ziyiyang/">Ziyi Yang</a>,
-				<a href="https://nlp-yang.github.io/">Yang Liu</a>,
-				<a href="https://cs.stanford.edu/people/cgzhu/">Chenguang Zhu</a>,
-				<a href="https://www.microsoft.com/en-us/research/people/nzeng/">Michael Zeng</a>,
-					<a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal</a> -->
 				<br>
-				<em>Arxiv</em>, 2023
+				<p><span style="color: red; font-weight: bold;"><em>ECCV 2024</em></span> </p>
 				<br>
 				<a href="https://aifeg.github.io/BenchLMM/">Project Page</a>
 				  /
@@ -161,7 +156,7 @@
 				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/University_of_Technology_Sydney_emblem.svg.png"></td>
 				<td width="75%" valign="center">
 				  <p>University of Technology Sydeny, B.S. in Software Engineering, 2023 - Present  </p>
-					WAM: 85.5/100 - First Class Honours.
+					WAM: 88.5/100 - First Class Honours.
 				</td>
 			</tr>	
 			<tr>
