--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>What's news</heading>
               <p style="color: red; font-weight: bold;">
-				2024-07-01: <a href="https://aifeg.github.io/BenchLMM/">One paper</a>  was accept by ECCV 2024. </p> <p>
+				2024-07-01: <a href="https://aifeg.github.io/BenchLMM/">One paper</a>  was accepted by ECCV 2024. </p> <p>
 				2024-02-29: Prof. Ling Chen had accepted me as an undergraduate research assistant at Australia Artificial Intelligence Institute(AAII). <br>
 				2023-07-01: I am honored to be selected as an international exchange student majoring in Softawre Engineering at UTS. <br>
 				2023-05-18: Prof. Dayan Guan had accepted me as a remote undergraduate research assistant at ROSE Lab. <br>
