--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
               <p style="text-align:center">
                 <name>Zirui Song</name>
               </p>
-              <p>  I am a third year Undergraduate at University of Technology Sydeny(UTS) majoring in Software Engineering. I have become a member of <a href="https://utsnlp.github.io/">UTS-NLP</a> since Feb 2024 where I am fortuante to be advised by  <a href="https://profiles.uts.edu.au/Ling.Chen">Prof. Ling Chen</a>, and be mentored by <a href="https://mengf1.github.io/">Prof. Meng Fang</a>
+              <p>  I am a forth year Undergraduate at University of Technology Sydeny(UTS) majoring in Software Engineering. Also I am a visiting student supervised by <a href="https://scholar.google.com.au/citations?hl=en&user=COUnAF4AAAAJ&view_op=list_works&sortby=pubdate">Prof. Xiuying Chen</a> in <a href="https://www.mbzuai.ac.ae">MBZUAI</a> NLP department . I have become a member of <a href="https://utsnlp.github.io/">UTS-NLP</a> since Feb 2024 where I am fortuante to be advised by  <a href="https://profiles.uts.edu.au/Ling.Chen">Prof. Ling Chen</a>, and be mentored by <a href="https://mengf1.github.io/">Prof. Meng Fang</a>
 				I am deeply appreciative of my mentor, <a href="https://dayan-guan.github.io/">Prof. Dayan Guan</a>, who guided me into scientific research.
-				<!-- NTU <a href="https://www.ntu.edu.sg/rose">ROSE</a> <a href="https://dayan-guan.github.io/">Dayan Guan</a>, University of Sydeny <a href="https://a5507203.github.io/">Yu Yao</a> and Mohamed bin Zayed University of Artificial Intelligence (MBZUAI) <a href="https://zhenhaochenofficial.github.io/" >Zhenhao Chen</a>
-		   --> Previously, I had wonderful experience working with <a href="https://jsjytx.neuq.edu.cn/info/1041/1634.htm">Miao Fang</a> at <a href="https://www.NEU.edu.cn">NEU</a>. 
+
+		       Previously, I had wonderful experience working with <a href="https://jsjytx.neuq.edu.cn/info/1041/1634.htm">Miao Fang</a> at <a href="https://www.NEU.edu.cn">NEU</a>. 
               </p>
 			  <p>I am curently seeking for the Mphil/Ph.D position in 2025 fall.</p>
               <p style="text-align:center">
@@ -48,7 +48,9 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>What's news</heading>
               <p style="color: red; font-weight: bold;">
-				2024-07-01: <a href="https://aifeg.github.io/BenchLMM/">One paper</a>  was accepted by ECCV 2024. </p> <p>
+				2024-09-20: <a href="https://openreview.net/forum?id=uYXWGpiGuL">One paper</a>  was accepted by EMNLP 2024. </p>
+				<p style="color: red; font-weight: bold;">
+				2024-07-01: <a href="https://aifeg.github.io/BenchLMM/">One paper</a>  was accepted by ECCV 2024. </p> 
 				2024-02-29: Prof. Ling Chen had accepted me as an undergraduate research assistant at Australia Artificial Intelligence Institute(AAII). <br>
 				2023-07-01: I am honored to be selected as an international exchange student majoring in Softawre Engineering at UTS. <br>
 				2023-05-18: Prof. Dayan Guan had accepted me as a remote undergraduate research assistant at ROSE Lab. <br>
@@ -150,30 +152,36 @@
 		  </tr>
 		</tbody></table>
 		<table width="100%" align="center" border="0" cellpadding="20"><tbody>  
-
+			<tr>
+				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/Muhammad-Bin-Zaid-University-Postgraduate-Study-Scholarships-in-the-UAE.webp"></td>
+				<td width="75%" valign="center">
+				  <p>MOHAMED BIN ZAYED University of ARTIFICIAL INTELLIGENCE, visiting student. in NLP department, 2024.09 - Present  </p>
+					I am fortunate to be supervised by <a href="https://scholar.google.com.au/citations?hl=en&user=COUnAF4AAAAJ&view_op=list_works&sortby=pubdate">Prof. Xiuying Chen</a> in <a href="https://www.mbzuai.ac.ae">MBZUAI NLP department</a>.
+				</td>
+			</tr>
 
 			<tr>
 				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/University_of_Technology_Sydney_emblem.svg.png"></td>
 				<td width="75%" valign="center">
-				  <p>University of Technology Sydeny, B.S. in Software Engineering, 2023 - Present  </p>
+				  <p>University of Technology Sydeny, B.S. in Software Engineering, 2021 - 2025  </p>
 					WAM: 88.5/100 - First Class Honours.
 				</td>
 			</tr>	
-			<tr>
+			<!-- <tr>
 				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/NEU.png"></td>
 				<td width="75%" valign="center">
 				  <p>Northeastern University, B.S. in Computer Science and Technology, 2021 - 2023 </p>
 				  GPA: 3.47/4.00
 				  <p>After two years of academic pursuits, I was honored to be selected as an exchange student for the University of Technology Sydney, where I will complete the final two years of my undergraduate studies.</p>
 				</td>
-			</tr>	
-			<tr>
+			</tr>	 -->
+			<!-- <tr>
 				<td style="padding:20px;width:25%;vertical-align:middle"><img width="100" src="images/Hengshui_High_School.jpg"></td>
 				<td width="75%" valign="center">
 				  <p>Hebei Hengshui High School, <b>Top 1</b> Senior high school in China<a href="https://www.isacteach.com/top-600-high-schools-in-china/"></a>, 2018 - 2021 </p>
 				  <p>I am very grateful to have met my science and innovation mentor here.</p>
 				</td>
-			</tr>	
+			</tr>	 -->
 		</tbody></table>
 		
 		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
