--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
 				<a href="https://www.linkedin.com/in/zirui-song-333863289/">LinkedIn</a> &nbsp/&nbsp
 				<a href="images/Wechat.png">Wechat</a>
 
-
               </p>
             </td>
             <td style="padding:2.5%;width:25%;max-width:25%">
               <a href="images/zirui.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/zirui.jpg" class="hoverZoomLink"></a>
+
+			<a href="https://hits.seeyoufarm.com" target="_blank" data-immersive-translate-walked="4e5fea93-f711-43ea-9e6a-c98ce29593f2">
+				<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fziruisongbest.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"" style="display: block; margin-left: auto; margin-right: auto; width: 55%;">
+			</a>
             </td>
           </tr>
         </tbody></table>
@@ -55,8 +58,8 @@
 				2023-07-01: I am honored to be selected as an international exchange student majoring in Softawre Engineering at UTS. <br>
 				2023-05-18: Prof. Dayan Guan had accepted me as a remote undergraduate research assistant at ROSE Lab. <br>
 				2022-04-11: Prof. Miao Fang had accepted me as an undergraduate research assistant at NEU-NLP Lab. <br>
-				2022-02-15: I won a third-class scholarship from Northeastern University. <br>
-				2021-09-07: I was admitted to the Computer Science and Technology major at Northeastern University(NEU) <br>
+
+
 
               </p>
             </td>
@@ -124,6 +127,7 @@
 					<a>Zhenhao Chen</a>, 
 					<a>Zecheng Shi</a>, 
 					<a>Yuan Huang</a>, 
+					<a>Ling Chen</a>
 					<a href="https://profiles.uts.edu.au/Ling.Chen">Ling Chen</a>
 					<h5 > *Equal contribution, †Corresponding Author </h5>
 					<br>
